# Learn-DeepLearning

./: 1.py  11.py  Chapter 1.md  Chapter01.md  Chapter02.md  Chapter03.md  Chapter04.md  Chapter05.md  Chapter06.md  Chapter07.md  Chapter08.md  Chapter09.md  Chapter10.md  Chapter11.md  Chapter12.md  Note1.md  Note2.md  Project 1.md  Project 2.md  Project 3.md  Project 4.md  Project2.md  README.md  chapter01.py  requirements.txt  test01.py  深入浅出Alpha Zero技术原理.md
Chapter01/: CMakeLists.txt  Chapter01.md  chapter01.py  main.cpp
Chapter02/: C02data.py  C02main.py  C02net.py  C02sample.py  C02train.py  Chapter02.md  background_image_downloads.py
Chapter03/: C03ArcFaceLoss.py  C03CenterLoss.py  C03FeatureVisualization.py  C03FeatureVisualizationWithArcFace.py  C03FeatureVisualizationWithCenterLoss.py  test03.py  test04.py  test05.py  test06.py  test7.py  test8.py
Chapter04/: C04Dropout.py  C04ResNet.py  C04WeightInit.py
Chapter05/: P5Calculation.py  P5ChannelShuffle.py  test.py
Chapter06/: 1.py  2.py  C6GRU循环门单元.py  C6LSTM长短期记忆网络.py  C6RNN.py  C6RNN识别手写数字.py  C6反卷积.py  C6生成验证码.py  C6编解码.py  C6识别验证码.py  C6识别验证码测试.py
Chapter07/: 1.py  2.py  C02DCGan.py  C02StyleTransfer.py  C07DNet.py  C07FastNeuralStyleTransfer.py  C07Gan.py  C07StyleGAN.py  Fast Neural Style Transfer.md  Gan_with_sin.py  StyleTransfer.md  test.py
Chapter08/: c08U2Net.py  c08UNET.py  c08UNet_DRIVE.py
Chapter09/: 1.py  2.py  c09DQN.py  c09DQN_car.py  c09DQN_fly.py  game.py  q_learn.py  q_net_Acrobot.pth  q_net_CartPole.pth  q_net_MountainCar.pth  强化学习DQN并玩CartPole游戏.md  深入浅出Alpha Zero技术原理.md
(+138 files in other folders)
